--- a/Emplokey WebAdmin/Views/Shared/_Layout.cshtml
+++ b/Emplokey WebAdmin/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Logs", "Index", "Logs")</li>
+                    <li>@Html.ActionLink("Users", "Index", "Users")</li>
+                    <li>@Html.ActionLink("Computers", "Index", "Computers")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
